[Monitoring] Add Logstash monitoring feature
This PR adds UI for visualizing Logstash internal metrics with contributions from @ph, @jsvd and @pickypg

Changes include:

* x-pack component for Logstash which installs a monitoring exporter plugin to Logstash core. This periodically ships
  monitoring data to the monitoring bulk API endpoint.
* Adds xpack.monitoring.* setting to logstash.yml when x-pack is installed.
* UI changes to graph Logstash monitoring data. Logstash processes are called nodes. They send separate monitoring info
  which gets aggregated and displayed at cluster level and also at individual node level.
* Adds gradle build support for Logstash x-pack which can be controled via `xpack.logstash.build=false`

Fixes elastic/elasticsearch#4169

Original commit: elastic/x-pack-elasticsearch@f58ef406c197b7dd567d4adf7daa697f1fabcf53

--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,13 @@ subprojects {
 
 task bundlePack(type: Zip) {
   onlyIf { project('kibana').bundlePlugin.enabled }
+  onlyIf { project('logstash').bundlePlugin.enabled }
   dependsOn 'elasticsearch:bundlePlugin'
   dependsOn 'kibana:bundlePlugin'
+  dependsOn 'logstash:bundlePlugin'
   from { zipTree(project('elasticsearch').bundlePlugin.outputs.files.singleFile) }
   from { zipTree(project('kibana').bundlePlugin.outputs.files.singleFile) }
+  from { zipTree(project('logstash').bundlePlugin.outputs.files.singleFile) }
   destinationDir file('build/distributions')
   baseName = 'x-pack'
   version = VersionProperties.elasticsearch
