Added open and close job APIs.
* A job now has the following statuses: OPENING, OPENED, CLOSING, CLOSED and FAILED.
* The open job and close job APIs wait until the job gets into a OPENED or CLOSED state.
* The post data api no longer lazily opens a job and fails if the job has not been opened.
* When a job gets into a failed state also the reason is recorded in the allocation.
* Removed pause and resume APIs.
* Made `max_running_jobs` setting dynamically updatedable.

Original commit: elastic/x-pack-elasticsearch@3485ec5317f2d9c621f9b8dbf2675455c6ae6f91

--- a/elasticsearch/src/test/resources/rest-api-spec/test/delete_model_snapshot.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/delete_model_snapshot.yaml
@@ -17,6 +17,14 @@ setup:
           }
 
   - do:
+      xpack.prelert.open_job:
+        job_id: foo
+
+  - do:
+      xpack.prelert.close_job:
+        job_id: foo
+
+  - do:
       index:
         index:  prelertresults-foo
         type:   model_snapshot
