Remove unnecessary parts of scheduler config (elastic/elasticsearch#468)
* Remove credentials from SchedulerConfig

* Remove dataSource and baseUrl from SchedulerConfig

Original commit: elastic/x-pack-elasticsearch@f5b92be2525965844fcbdaba0a69edb47d97f0e3

--- a/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
+++ b/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
@@ -50,7 +50,6 @@ job.cannot.resume = Cannot resume job ''{0}'' while its status is {1}
 
 job.config.byField.incompatible.function = by_field_name cannot be used with function ''{0}''
 job.config.byField.needs.another = by_field_name must be used in conjunction with field_name or function
-job.config.cannot.encrypt.password = Cannot encrypt password
 job.config.categorization.filters.require.categorization.field.name = categorization_filters require setting categorization_field_name
 job.config.categorization.filters.contains.duplicates = categorization_filters contain duplicates
 job.config.categorization.filter.contains.empty = categorization_filters are not allowed to contain empty strings
@@ -83,8 +82,8 @@ job.config.id.too.long = The job id cannot contain more than {0,number,integer} 
 job.config.invalid.fieldname.chars = Invalid fieldname ''{0}''. Fieldnames including over, by and partition fields cannot contain any of these characters: {1}
 job.config.invalid.jobid.chars = Invalid job id; must be lowercase alphanumeric and may contain hyphens or underscores
 job.config.invalid.timeformat = Invalid Time format string ''{0}''
-job.config.missing.analysisconfig = Either an an AnalysisConfig or job reference id must be set
-job.config.model.debug.config.invalid.bounds.percentile = Invalid modelDebugConfig: bounds_percentile must be in the range [0, 100]
+job.config.missing.analysisconfig = An AnalysisConfig must be set
+job.config.model.debug.config.invalid.bounds.percentile = Invalid modelDebugConfig: boundsPercentile must be in the range [0, 100]
 job.config.field.value.too.low = {0} cannot be less than {1,number}. Value = {2,number}
 job.config.no.analysis.field = One of function, fieldName, by_field_name or over_field_name must be set
 job.config.no.analysis.field.not.count = Unless the function is 'count' one of field_name, by_field_name or over_field_name must be set
@@ -116,13 +115,12 @@ job.config.update.job.is.not.closed = Cannot update key ''{0}'' while job is not
 job.config.update.model.debug.config.parse.error = JSON parse error reading the update value for ModelDebugConfig
 job.config.update.requires.non.empty.object = Update requires JSON that contains a non-empty object
 job.config.update.parse.error = JSON parse error reading the job update
-job.config.update.background.persist.interval.invalid = Invalid update value for background_persist_interval: value must be an exact number of seconds no less than 3600
-job.config.update.renormalization.window.days.invalid = Invalid update value for renormalization_window_days: value must be an exact number of days
-job.config.update.model.snapshot.retention.days.invalid = Invalid update value for model_snapshot_retention_days: value must be an exact number of days
-job.config.update.results.retention.days.invalid = Invalid update value for results_retention_days: value must be an exact number of days
-job.config.update.scheduler.config.parse.error = JSON parse error reading the update value for scheduler_config
-job.config.update.scheduler.config.cannot.be.null = Invalid update value for scheduler_config: null
-job.config.update.scheduler.config.data.source.invalid = Invalid update value for scheduler_config: data_source cannot be changed; existing is {0}, update had {1}
+job.config.update.background.persist.interval.invalid = Invalid update value for backgroundPersistInterval: value must be an exact number of seconds no less than 3600
+job.config.update.renormalization.window.days.invalid = Invalid update value for renormalizationWindowDays: value must be an exact number of days
+job.config.update.model.snapshot.retention.days.invalid = Invalid update value for modelSnapshotRetentionDays: value must be an exact number of days
+job.config.update.results.retention.days.invalid = Invalid update value for resultsRetentionDays: value must be an exact number of days
+job.config.update.scheduler.config.parse.error = JSON parse error reading the update value for schedulerConfig
+job.config.update.scheduler.config.cannot.be.null = Invalid update value for schedulerConfig: null
 
 job.config.transform.circular.dependency = Transform type {0} with inputs {1} has a circular dependency
 job.config.transform.condition.required = A condition must be defined for transform ''{0}''
@@ -138,15 +136,12 @@ job.config.transform.outputs.unused = None of the outputs of transform ''{0}'' a
 job.config.transform.output.name.used.more.than.once = Transform output name ''{0}'' is used more than once
 job.config.transform.unknown.type = Unknown TransformType ''{0}''
 job.config.unknown.function = Unknown function ''{0}''
-job.config.scheduler.unknown.datasource = Unknown scheduler dataSource ''{0}''
-job.config.scheduler.field.not.supported = Scheduler configuration field {0} not supported for dataSource ''{1}''
+job.config.scheduler.field.not.supported = Scheduler configuration field {0} not supported
 job.config.scheduler.invalid.option.value = Invalid {0} value ''{1}'' in scheduler configuration
 job.config.scheduler.requires.bucket.span = A job configured with scheduler requires that bucket_span is specified
 job.config.scheduler.elasticsearch.does.not.support.latency = A job configured with an Elasticsearch scheduler cannot support latency
-job.config.scheduler.aggregations.requires.summary.count.field = A scheduler job with aggregations for dataSource ''{0}'' must have summary_count_field_name ''{1}''
+job.config.scheduler.aggregations.requires.summary.count.field = A scheduler job with aggregations must have summaryCountFieldName ''{1}''
 job.config.scheduler.elasticsearch.requires.dataformat.elasticsearch = A job configured with an Elasticsearch scheduler must have dataFormat ''ELASTICSEARCH''
-job.config.scheduler.incomplete.credentials = Both username and password must be specified if either is
-job.config.scheduler.multiple.passwords = Both password and encryptedPassword were specified - please just specify one
 job.config.scheduler.multiple.aggregations = Both aggregations and aggs were specified - please just specify one
 
 job.data.concurrent.use.close = Cannot close job {0} while another connection {2}is {1} the job
