Changes rest actions with data namespace into the job namespace. Also added `_status` suffic to get job api as it would otherwise clash with open/close/flush APIs.
Original commit: elastic/x-pack-elasticsearch@6e8ef0ef7d8e95d25d4900b5eb10946e6139d8c8

--- a/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_stats.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_stats.yaml
@@ -70,14 +70,14 @@ setup:
 
 
   - do:
-      xpack.prelert.post_data:
+      xpack.prelert.job_data:
         job_id: job-stats-test
         body: >
           {"airline":"AAL","responsetime":"132.2046","time":"1403481600"}
           {"airline":"JZA","responsetime":"990.4628","time":"1403481600"}
 
   - do:
-      xpack.prelert.flush_data:
+      xpack.prelert.flush_job:
         job_id: job-stats-test
   - match: { acknowledged: true }
 
