--- a/elasticsearch/src/test/resources/rest-api-spec/test/post_data.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/post_data.yaml
@@ -23,7 +23,7 @@ setup:
 ---
 "Test POST data job api, flush, close and verify DataCounts doc":
   - do:
-      xpack.prelert.post_data:
+      xpack.prelert.job_data:
         job_id: farequote
         body: >
           {"airline":"AAL","responsetime":"132.2046","sourcetype":"farequote","time":"1403481600"}
@@ -40,7 +40,7 @@ setup:
   - match: { latest_record_timestamp: 1403481700000}
 
   - do:
-      xpack.prelert.flush_data:
+      xpack.prelert.flush_job:
         job_id: farequote
   - match: { acknowledged: true }
 
@@ -75,7 +75,7 @@ setup:
 "Test POST data with invalid parameters":
   - do:
       catch: /parse_exception/
-      xpack.prelert.post_data:
+      xpack.prelert.job_data:
         job_id: foo
         reset_start: not_a_date
         body:  >
@@ -84,7 +84,7 @@ setup:
 
   - do:
       catch: /parse_exception/
-      xpack.prelert.post_data:
+      xpack.prelert.job_data:
         job_id: foo
         reset_end: end_not_a_date
         body:  >
@@ -95,18 +95,18 @@ setup:
 "Test Flush data with invalid parameters":
   - do:
       catch: /parse_exception/
-      xpack.prelert.flush_data:
+      xpack.prelert.flush_job:
         job_id: foo
         start: not_a_date
 
   - do:
       catch: /parse_exception/
-      xpack.prelert.flush_data:
+      xpack.prelert.flush_job:
         job_id: foo
         end: end_not_a_date
 
   - do:
       catch: /parse_exception/
-      xpack.prelert.flush_data:
+      xpack.prelert.flush_job:
         job_id: foo
         advance_time: advance_time_not_a_date
