Make jobId and from/size mutually exclusive options (elastic/elasticsearch#477)
Make jobId and from/size mutually exclusive options.  

This approach has the main properties of not allowing an invalid Request to be built, and alerting the user if they set an incorrect configuration. It has the downside that PageParams can be null so the consumer will have to check for it. Since jobId could be null before, this seemed acceptable.

Original commit: elastic/x-pack-elasticsearch@106dcdf61aace4c35e8f6f04cc883eb5dc707da9

--- a/elasticsearch/src/test/resources/rest-api-spec/test/jobs_crud.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/jobs_crud.yaml
@@ -37,6 +37,11 @@
   - match: { jobs.0.config.job_id: "farequote" }
 
   - do:
+      xpack.prelert.get_jobs: {}
+  - match: { count: 1 }
+  - match: { jobs.0.config.job_id: "farequote" }
+
+  - do:
       xpack.prelert.delete_job:
         job_id: "farequote"
   - match: { acknowledged: true }
@@ -95,3 +100,48 @@
                 "time_format":"yyyy-MM-dd HH:mm:ssX"
             }
           }
+
+---
+"Test jobid + from and/or size":
+  - do:
+      catch: request
+      xpack.prelert.get_jobs:
+        job_id: "job-stats-test"
+        from: 0
+
+  - do:
+      catch: request
+      xpack.prelert.get_jobs:
+        job_id: "job-stats-test"
+        size: 100
+
+  - do:
+      catch: request
+      xpack.prelert.get_jobs:
+        job_id: "job-stats-test"
+        from: 0
+        size: 100
+
+---
+"Test jobid + from and/or size (via body)":
+  - do:
+      catch: request
+      xpack.prelert.get_jobs:
+        body:
+          job_id: "job-stats-test"
+          from: 0
+
+  - do:
+      catch: request
+      xpack.prelert.get_jobs:
+        body:
+          job_id: "job-stats-test"
+          size: 100
+
+  - do:
+      catch: request
+      xpack.prelert.get_jobs:
+        body:
+          job_id: "job-stats-test"
+          from: 0
+          size: 100
