Convert field references in error messages to snake case (elastic/elasticsearch#495)
* Convert field references in error messages to snake case

Closes elastic/elasticsearch#493

Original commit: elastic/x-pack-elasticsearch@38f4cd91bcd5820b070896013e2394bd1ad8955e

--- a/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
+++ b/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
@@ -79,13 +79,13 @@ job.config.function.requires.overfield = over_field_name must be set when the ''
 job.config.function.incompatible.presummarized = The ''{0}'' function cannot be used in jobs that will take pre-summarized input
 job.config.id.already.taken = The job cannot be created with the Id ''{0}''. The Id is already used.
 job.config.id.too.long = The job id cannot contain more than {0,number,integer} characters.
-job.config.invalid.fieldname.chars = Invalid fieldname ''{0}''. Fieldnames including over, by and partition fields cannot contain any of these characters: {1}
+job.config.invalid.fieldname.chars = Invalid field name ''{0}''. Field names including over, by and partition fields cannot contain any of these characters: {1}
 job.config.invalid.jobid.chars = Invalid job id; must be lowercase alphanumeric and may contain hyphens or underscores
 job.config.invalid.timeformat = Invalid Time format string ''{0}''
-job.config.missing.analysisconfig = An AnalysisConfig must be set
-job.config.model.debug.config.invalid.bounds.percentile = Invalid modelDebugConfig: boundsPercentile must be in the range [0, 100]
+job.config.missing.analysisconfig = An analysis_config must be set
+job.config.model.debug.config.invalid.bounds.percentile = Invalid model_debug_config: bounds_percentile must be in the range [0, 100]
 job.config.field.value.too.low = {0} cannot be less than {1,number}. Value = {2,number}
-job.config.no.analysis.field = One of function, fieldName, by_field_name or over_field_name must be set
+job.config.no.analysis.field = One of function, field_name, by_field_name or over_field_name must be set
 job.config.no.analysis.field.not.count = Unless the function is 'count' one of field_name, by_field_name or over_field_name must be set
 job.config.no.detectors = No detectors configured
 job.config.overField.incompatible.function = over_field_name cannot be used with function ''{0}''
@@ -96,8 +96,8 @@ job.config.multiple.bucketspans.must.be.multiple = Multiple bucket_span ''{0}'' 
 job.config.per.partition.normalisation.requires.partition.field = If the job is configured with Per-Partition Normalization enabled a detector must have a partition field
 job.config.per.partition.normalisation.cannot.use.influencers = A job configured with Per-Partition Normalization cannot use influencers
 
-job.config.update.analysis.limits.parse.error = JSON parse error reading the update value for analysisLimits
-job.config.update.analysis.limits.cannot.be.null = Invalid update value for analysisLimits: null
+job.config.update.analysis.limits.parse.error = JSON parse error reading the update value for analysis_limits
+job.config.update.analysis.limits.cannot.be.null = Invalid update value for analysis_limits: null
 job.config.update.analysis.limits.model.memory.limit.cannot.be.decreased = Invalid update value for analysis_limits: model_memory_limit cannot be decreased; existing is {0}, update had {1}
 job.config.update.categorization.filters.invalid = Invalid update value for categorization_filters: value must be an array of strings; actual was: {0}
 job.config.update.custom.settings.invalid = Invalid update value for custom_settings: value must be an object
@@ -115,12 +115,12 @@ job.config.update.job.is.not.closed = Cannot update key ''{0}'' while job is not
 job.config.update.model.debug.config.parse.error = JSON parse error reading the update value for ModelDebugConfig
 job.config.update.requires.non.empty.object = Update requires JSON that contains a non-empty object
 job.config.update.parse.error = JSON parse error reading the job update
-job.config.update.background.persist.interval.invalid = Invalid update value for backgroundPersistInterval: value must be an exact number of seconds no less than 3600
-job.config.update.renormalization.window.days.invalid = Invalid update value for renormalizationWindowDays: value must be an exact number of days
-job.config.update.model.snapshot.retention.days.invalid = Invalid update value for modelSnapshotRetentionDays: value must be an exact number of days
-job.config.update.results.retention.days.invalid = Invalid update value for resultsRetentionDays: value must be an exact number of days
-job.config.update.scheduler.config.parse.error = JSON parse error reading the update value for schedulerConfig
-job.config.update.scheduler.config.cannot.be.null = Invalid update value for schedulerConfig: null
+job.config.update.background.persist.interval.invalid = Invalid update value for background_persist_interval: value must be an exact number of seconds no less than 3600
+job.config.update.renormalization.window.days.invalid = Invalid update value for renormalization_window_days: value must be an exact number of days
+job.config.update.model.snapshot.retention.days.invalid = Invalid update value for model_snapshot_retention_days: value must be an exact number of days
+job.config.update.results.retention.days.invalid = Invalid update value for results_retention_days: value must be an exact number of days
+job.config.update.scheduler.config.parse.error = JSON parse error reading the update value for scheduler_config
+job.config.update.scheduler.config.cannot.be.null = Invalid update value for scheduler_config: null
 
 job.config.transform.circular.dependency = Transform type {0} with inputs {1} has a circular dependency
 job.config.transform.condition.required = A condition must be defined for transform ''{0}''
@@ -140,7 +140,7 @@ job.config.scheduler.field.not.supported = Scheduler configuration field {0} not
 job.config.scheduler.invalid.option.value = Invalid {0} value ''{1}'' in scheduler configuration
 job.config.scheduler.requires.bucket.span = A job configured with scheduler requires that bucket_span is specified
 job.config.scheduler.elasticsearch.does.not.support.latency = A job configured with an Elasticsearch scheduler cannot support latency
-job.config.scheduler.aggregations.requires.summary.count.field = A scheduler job with aggregations must have summaryCountFieldName ''{1}''
+job.config.scheduler.aggregations.requires.summary.count.field = A scheduler job with aggregations must have summary_count_field_name ''{1}''
 job.config.scheduler.elasticsearch.requires.dataformat.elasticsearch = A job configured with an Elasticsearch scheduler must have dataFormat ''ELASTICSEARCH''
 job.config.scheduler.multiple.aggregations = Both aggregations and aggs were specified - please just specify one
 
