--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,22 @@ import org.elasticsearch.gradle.VersionProperties
 import org.elastic.gradle.UploadS3Task
 
 String envAwsAccessKey = System.env.AWS_ACCESS_KEY_ID
+print 'BUILD - System.env.AWS_ACCESS_KEY_ID: ' + envAwsAccessKey + '\n'
 if (envAwsAccessKey != null) {
+  print 'using access key from System.env.AWS_ACCESS_KEY_ID: ' + envAwsAccessKey + '\n'
   project.ext.awsAccessKey = envAwsAccessKey
 } else if (project.hasProperty("AWS_ACCESS_KEY_ID")) {
+  print 'using access key from gradle.properties: ' + AWS_ACCESS_KEY_ID + '\n'
   project.ext.awsAccessKey = AWS_ACCESS_KEY_ID
 }
 
 String envAwsSecretKey = System.env.AWS_SECRET_ACCESS_KEY
+print 'BUILD - System.env.AWS_SECRET_ACCESS_KEY: ' + envAwsSecretKey + '\n'
 if (envAwsSecretKey != null) {
+  print 'using access key from System.env.AWS_SECRET_ACCESS_KEY: ' + envAwsSecretKey + '\n'
   project.ext.awsSecretKey = envAwsSecretKey
 } else if (project.hasProperty("AWS_SECRET_ACCESS_KEY")) {
+  print 'using secret key from gradle.properties: ' + AWS_SECRET_ACCESS_KEY + '\n'
   project.ext.awsSecretKey = AWS_SECRET_ACCESS_KEY
 }
 
