--- a/build.gradle
+++ b/build.gradle
@@ -6,24 +6,24 @@ import org.elasticsearch.gradle.precommit.LicenseHeadersTask
 import org.elasticsearch.gradle.VersionProperties
 import org.elastic.gradle.UploadS3Task
 
-String envAwsAccessKey = System.env.AWS_ACCESS_KEY_ID
-print 'BUILD - System.env.AWS_ACCESS_KEY_ID: ' + envAwsAccessKey + '\n'
-if (envAwsAccessKey != null) {
-  print 'using access key from System.env.AWS_ACCESS_KEY_ID: ' + envAwsAccessKey + '\n'
-  project.ext.awsAccessKey = envAwsAccessKey
-} else if (project.hasProperty("AWS_ACCESS_KEY_ID")) {
-  print 'using access key from gradle.properties: ' + AWS_ACCESS_KEY_ID + '\n'
-  project.ext.awsAccessKey = AWS_ACCESS_KEY_ID
+String envPrelertAwsAccessKey = System.env.PRELERT_AWS_ACCESS_KEY_ID
+print 'BUILD - System.env.PRELERT_AWS_ACCESS_KEY_ID: ' + envPrelertAwsAccessKey + '\n'
+if (envPrelertAwsAccessKey != null) {
+  print 'using access key from System.env.PRELERT_AWS_ACCESS_KEY_ID: ' + envPrelertAwsAccessKey + '\n'
+  project.ext.prelertAwsAccessKey = envPrelertAwsAccessKey
+} else if (project.hasProperty("PRELERT_AWS_ACCESS_KEY_ID")) {
+  print 'using access key from gradle.properties: ' + PRELERT_AWS_ACCESS_KEY_ID + '\n'
+  project.ext.prelertAwsAccessKey = PRELERT_AWS_ACCESS_KEY_ID
 }
 
-String envAwsSecretKey = System.env.AWS_SECRET_ACCESS_KEY
-print 'BUILD - System.env.AWS_SECRET_ACCESS_KEY: ' + envAwsSecretKey + '\n'
-if (envAwsSecretKey != null) {
-  print 'using access key from System.env.AWS_SECRET_ACCESS_KEY: ' + envAwsSecretKey + '\n'
-  project.ext.awsSecretKey = envAwsSecretKey
-} else if (project.hasProperty("AWS_SECRET_ACCESS_KEY")) {
-  print 'using secret key from gradle.properties: ' + AWS_SECRET_ACCESS_KEY + '\n'
-  project.ext.awsSecretKey = AWS_SECRET_ACCESS_KEY
+String envPrelertAwsSecretKey = System.env.PRELERT_AWS_SECRET_ACCESS_KEY
+print 'BUILD - System.env.PRELERT_AWS_SECRET_ACCESS_KEY: ' + envPrelertAwsSecretKey + '\n'
+if (envPrelertAwsSecretKey != null) {
+  print 'using access key from System.env.PRELERT_AWS_SECRET_ACCESS_KEY: ' + envPrelertAwsSecretKey + '\n'
+  project.ext.prelertAwsSecretKey = envPrelertAwsSecretKey
+} else if (project.hasProperty("PRELERT_AWS_SECRET_ACCESS_KEY")) {
+  print 'using secret key from gradle.properties: ' + PRELERT_AWS_SECRET_ACCESS_KEY + '\n'
+  project.ext.prelertAwsSecretKey = PRELERT_AWS_SECRET_ACCESS_KEY
 }
 
 project.ext.isWindows = OperatingSystem.current().isWindows()
