Make ModelSizeStats a result type (elastic/elasticsearch#500)
* Make ModelSizeStats a result type

* Address review comments

Original commit: elastic/x-pack-elasticsearch@74de7b36d8d628e5d45ce17fc83a73b5b93a56bd

--- a/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_stats.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_stats.yaml
@@ -47,10 +47,11 @@ setup:
   - do:
       index:
         index:  prelertresults-job-stats-test
-        type:   model_size_stats
+        type:   result
         id:     model_size_stats
         body:   {
                   "job_id": "job-stats-test",
+                  "result_type": "model_size_stats",
                   "log_time": 1480896000000,
                   "timestamp": 1480896000000,
                   "model_bytes": 100,
