Moved scheduler status to prelertmetadata to make it more independent of job.
Removed SchedulerStats as scheduler status is all we need and start and end times are only needed in start scheduler api.

Original commit: elastic/x-pack-elasticsearch@80c563cb696444aac3495f821af8dfacb1d7b004

--- a/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_stats.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/jobs_get_stats.yaml
@@ -146,7 +146,7 @@ setup:
   - is_false: jobs.0.config
   - is_false: jobs.0.data_counts
   - is_false: jobs.0.model_size_stats
-  - match: { jobs.0.scheduler_state.status: STOPPED }
+  - match: { jobs.0.scheduler_state: STOPPED }
 
 ---
 "Test bad metric":
