Add back parts of the normalizer functionality (elastic/elasticsearch#526)
* Added back Normalizable classes
* Added back normalization process management classes
* Added back the scores updater

Original commit: elastic/x-pack-elasticsearch@ac8edf6ed6ab93ab9f2bea57d47786913e0884d4

--- a/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
+++ b/elasticsearch/src/main/resources/org/elasticsearch/xpack/prelert/job/messages/prelert_messages.properties
@@ -93,8 +93,8 @@ job.config.overField.needs.another = over_field_name must be used in conjunction
 job.config.overlapping.buckets.incompatible.function = Overlapping buckets cannot be used with function ''{0}''
 job.config.multiple.bucketspans.require.bucket_span = Multiple bucket_spans require a bucket_span to be specified
 job.config.multiple.bucketspans.must.be.multiple = Multiple bucket_span ''{0}'' must be a multiple of the main bucket_span ''{1}''
-job.config.per.partition.normalisation.requires.partition.field = If the job is configured with Per-Partition Normalization enabled a detector must have a partition field
-job.config.per.partition.normalisation.cannot.use.influencers = A job configured with Per-Partition Normalization cannot use influencers
+job.config.per.partition.normalization.requires.partition.field = If the job is configured with Per-Partition Normalization enabled a detector must have a partition field
+job.config.per.partition.normalization.cannot.use.influencers = A job configured with Per-Partition Normalization cannot use influencers
 
 job.config.update.analysis.limits.parse.error = JSON parse error reading the update value for analysis_limits
 job.config.update.analysis.limits.cannot.be.null = Invalid update value for analysis_limits: null
