--- a/elasticsearch/src/test/resources/rest-api-spec/test/post_data.yaml
+++ b/elasticsearch/src/test/resources/rest-api-spec/test/post_data.yaml
@@ -74,6 +74,12 @@ setup:
 ---
 "Test POST data with invalid parameters":
   - do:
+      catch: missing
+      xpack.prelert.job_data:
+        job_id: not_a_job
+        body: {}
+
+  - do:
       catch: /parse_exception/
       xpack.prelert.job_data:
         job_id: farequote
@@ -94,6 +100,11 @@ setup:
 ---
 "Test Flush data with invalid parameters":
   - do:
+      catch: missing
+      xpack.prelert.flush_job:
+        job_id: not_a_job
+
+  - do:
       catch: /parse_exception/
       xpack.prelert.flush_job:
         job_id: farequote
@@ -110,3 +121,15 @@ setup:
       xpack.prelert.flush_job:
         job_id: farequote
         advance_time: advance_time_not_a_date
+
+---
+"Test open and close with non-existent job id":
+  - do:
+      catch: missing
+      xpack.prelert.open_job:
+        job_id: not_a_job
+
+  - do:
+      catch: missing
+      xpack.prelert.close_job:
+        job_id: not_a_job
